Added Composer 2.0 executable and updated locks

--- a/deploy/ansible/roles/handle_composer/templates/test_config.yml.j2
+++ b/deploy/ansible/roles/handle_composer/templates/test_config.yml.j2
@@ -2,7 +2,7 @@
 mandatory_parameters:
     shop_path: "{{ build_root_path }}/source"
     shop_tests_path: "{{ build_root_path }}/tests"
-    partial_module_paths: 'b2b/b2b_services,b2b/b2b_basket,b2b/approval_procedure,b2b/budget,b2b/bulk_orders,b2b/buying_agent,b2b/custom_prices,b2b/quick_order,b2b/scheduled_orders,b2b/service_products,oe/psrlogger'
+    partial_module_paths: 'oxps/paypal'
 optional_parameters:
     shop_url: '{{ oxid.shop_url }}'
     shop_serial: ''
